fixed #2 - implemented authorization mechanism - implemented application environment builder for tests - reworked embedded mongodb server for tests

--- a/marlin-server/conf/application.conf
+++ b/marlin-server/conf/application.conf
@@ -1,2 +1,5 @@
 
 play.modules.enabled += "com.marlin.modules.AppModule"
+play.modules.enabled += "com.marlin.modules.SilhouetteModule"
+
+include "silhouette.conf"
